# serializer version: 1
# name: test_data_draw
  '''
  Failing test case: inner(
      data=data(...),
  )
  Draw 1: 0
  Draw 2: ''
  '''
# ---
# name: test_sampled_from_enum_flag
  '''
  Failing test case: inner(
      c=test_sampled_from_enum_flag.<locals>.Color.RED,
  )
  '''
# ---
# name: test_sampled_from_module_level_enum_flag
  '''
  Failing test case: inner(
      d=Direction.NORTH,
  )
  '''
# ---
